Tema2/src/output/COOLTreeBuilderParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g 2009-11-12 18:21:28

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class COOLTreeBuilderParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLASS_T", "BLOCK_T", "CALL_T", "FEATURES_T", "ASSIGN_T", "METHOD_T", "BOOL_T", "EXPR_T", "RETURN_TYPE_T", "TYPE_ID", "FORMALS_T", "ATTR_T", "ID_T", "INTEGER_T", "OP_T", "CLASS_ST", "TYPE", "INHERITS_ST", "ID", "NOT_ST", "ISVOID_ST", "INTEGER", "TRUE_ST", "FALSE_ST", "STRING", "NEW_ST", "IF_ST", "THEN_ST", "ELSE_ST", "FI_ST", "WHILE_ST", "LOOP_ST", "POOL_ST", "CASE_ST", "OF_ST", "ESAC_ST", "LET_ST", "IN_ST", "MULTI_COMMENT", "SINGLE_COMMENT", "ESC_SEQ", "WS", "';'", "'{'", "'}'", "'('", "','", "')'", "':'", "'<-'", "'<='", "'<'", "'='", "'+'", "'-'", "'*'", "'/'", "'~'", "'@'", "'.'", "'=>'"
    };
    public static final int T__64=64;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int TRUE_ST=26;
    public static final int CLASS_T=4;
    public static final int LET_ST=40;
    public static final int CLASS_ST=19;
    public static final int MULTI_COMMENT=42;
    public static final int FI_ST=33;
    public static final int T__61=61;
    public static final int ID=22;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int IN_ST=41;
    public static final int LOOP_ST=35;
    public static final int TYPE=20;
    public static final int EXPR_T=11;
    public static final int T__55=55;
    public static final int NOT_ST=23;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int INTEGER_T=17;
    public static final int T__58=58;
    public static final int ESC_SEQ=44;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__59=59;
    public static final int ASSIGN_T=8;
    public static final int INHERITS_ST=21;
    public static final int SINGLE_COMMENT=43;
    public static final int ATTR_T=15;
    public static final int BLOCK_T=5;
    public static final int T__50=50;
    public static final int INTEGER=25;
    public static final int T__46=46;
    public static final int WHILE_ST=34;
    public static final int T__47=47;
    public static final int FEATURES_T=7;
    public static final int OF_ST=38;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ELSE_ST=32;
    public static final int METHOD_T=9;
    public static final int BOOL_T=10;
    public static final int POOL_ST=36;
    public static final int OP_T=18;
    public static final int RETURN_TYPE_T=12;
    public static final int IF_ST=30;
    public static final int ID_T=16;
    public static final int ISVOID_ST=24;
    public static final int CASE_ST=37;
    public static final int ESAC_ST=39;
    public static final int WS=45;
    public static final int NEW_ST=29;
    public static final int FALSE_ST=27;
    public static final int CALL_T=6;
    public static final int TYPE_ID=13;
    public static final int FORMALS_T=14;
    public static final int STRING=28;
    public static final int THEN_ST=31;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "synpred3_COOLTreeBuilder", "synpred8_COOLTreeBuilder", 
        "synpred1_COOLTreeBuilder", "expr", "synpred9_COOLTreeBuilder", 
        "dispatchExprAux", "dispatchExpr", "multExpr", "isVoidExpr", "assignExpr", 
        "class_stat", "feature", "program", "notExpr", "synpred4_COOLTreeBuilder", 
        "relExpr", "tildaExpr", "synpred2_COOLTreeBuilder", "sumExpr", "synpred7_COOLTreeBuilder", 
        "synpred6_COOLTreeBuilder", "synpred5_COOLTreeBuilder", "atom", 
        "formal"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public COOLTreeBuilderParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public COOLTreeBuilderParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public COOLTreeBuilderParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return COOLTreeBuilderParser.tokenNames; }
    public String getGrammarFileName() { return "/home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g"; }




    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:31:1: program : ( class_stat ';' )+ -> ( ^( class_stat ) )+ ;
    public final COOLTreeBuilderParser.program_return program() throws RecognitionException {
        COOLTreeBuilderParser.program_return retval = new COOLTreeBuilderParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal2=null;
        COOLTreeBuilderParser.class_stat_return class_stat1 = null;


        CommonTree char_literal2_tree=null;
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleSubtreeStream stream_class_stat=new RewriteRuleSubtreeStream(adaptor,"rule class_stat");
        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(31, 1);

        try {
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:32:2: ( ( class_stat ';' )+ -> ( ^( class_stat ) )+ )
            dbg.enterAlt(1);

            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:33:2: ( class_stat ';' )+
            {
            dbg.location(33,2);
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:33:2: ( class_stat ';' )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==CLASS_ST) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:33:3: class_stat ';'
            	    {
            	    dbg.location(33,3);
            	    pushFollow(FOLLOW_class_stat_in_program266);
            	    class_stat1=class_stat();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_class_stat.add(class_stat1.getTree());
            	    dbg.location(33,14);
            	    char_literal2=(Token)match(input,46,FOLLOW_46_in_program268); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_46.add(char_literal2);


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}



            // AST REWRITE
            // elements: class_stat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 33:20: -> ( ^( class_stat ) )+
            {
                dbg.location(33,23);
                if ( !(stream_class_stat.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_class_stat.hasNext() ) {
                    dbg.location(33,23);
                    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:33:23: ^( class_stat )
                    {
                    CommonTree root_1 = (CommonTree)adaptor.nil();
                    dbg.location(33,25);
                    root_1 = (CommonTree)adaptor.becomeRoot(stream_class_stat.nextNode(), root_1);

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_class_stat.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(34, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "program"

    public static class class_stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_stat"
    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:36:1: class_stat : CLASS_ST name= TYPE ( INHERITS_ST baseClass= TYPE )? '{' ( feature ';' )* '}' -> ^( CLASS_T $name ( $baseClass)? ^( FEATURES_T ( feature )* ) ) ;
    public final COOLTreeBuilderParser.class_stat_return class_stat() throws RecognitionException {
        COOLTreeBuilderParser.class_stat_return retval = new COOLTreeBuilderParser.class_stat_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token name=null;
        Token baseClass=null;
        Token CLASS_ST3=null;
        Token INHERITS_ST4=null;
        Token char_literal5=null;
        Token char_literal7=null;
        Token char_literal8=null;
        COOLTreeBuilderParser.feature_return feature6 = null;


        CommonTree name_tree=null;
        CommonTree baseClass_tree=null;
        CommonTree CLASS_ST3_tree=null;
        CommonTree INHERITS_ST4_tree=null;
        CommonTree char_literal5_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal8_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_INHERITS_ST=new RewriteRuleTokenStream(adaptor,"token INHERITS_ST");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_CLASS_ST=new RewriteRuleTokenStream(adaptor,"token CLASS_ST");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
        RewriteRuleSubtreeStream stream_feature=new RewriteRuleSubtreeStream(adaptor,"rule feature");
        try { dbg.enterRule(getGrammarFileName(), "class_stat");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(36, 1);

        try {
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:37:2: ( CLASS_ST name= TYPE ( INHERITS_ST baseClass= TYPE )? '{' ( feature ';' )* '}' -> ^( CLASS_T $name ( $baseClass)? ^( FEATURES_T ( feature )* ) ) )
            dbg.enterAlt(1);

            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:38:2: CLASS_ST name= TYPE ( INHERITS_ST baseClass= TYPE )? '{' ( feature ';' )* '}'
            {
            dbg.location(38,2);
            CLASS_ST3=(Token)match(input,CLASS_ST,FOLLOW_CLASS_ST_in_class_stat290); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CLASS_ST.add(CLASS_ST3);

            dbg.location(38,15);
            name=(Token)match(input,TYPE,FOLLOW_TYPE_in_class_stat294); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_TYPE.add(name);

            dbg.location(38,21);
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:38:21: ( INHERITS_ST baseClass= TYPE )?
            int alt2=2;
            try { dbg.enterSubRule(2);
            try { dbg.enterDecision(2);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==INHERITS_ST) ) {
                alt2=1;
            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:38:22: INHERITS_ST baseClass= TYPE
                    {
                    dbg.location(38,22);
                    INHERITS_ST4=(Token)match(input,INHERITS_ST,FOLLOW_INHERITS_ST_in_class_stat297); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_INHERITS_ST.add(INHERITS_ST4);

                    dbg.location(38,43);
                    baseClass=(Token)match(input,TYPE,FOLLOW_TYPE_in_class_stat301); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_TYPE.add(baseClass);


                    }
                    break;

            }
            } finally {dbg.exitSubRule(2);}

            dbg.location(38,51);
            char_literal5=(Token)match(input,47,FOLLOW_47_in_class_stat305); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(char_literal5);

            dbg.location(38,55);
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:38:55: ( feature ';' )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:38:56: feature ';'
            	    {
            	    dbg.location(38,56);
            	    pushFollow(FOLLOW_feature_in_class_stat308);
            	    feature6=feature();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_feature.add(feature6.getTree());
            	    dbg.location(38,64);
            	    char_literal7=(Token)match(input,46,FOLLOW_46_in_class_stat310); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_46.add(char_literal7);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(38,70);
            char_literal8=(Token)match(input,48,FOLLOW_48_in_class_stat314); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_48.add(char_literal8);



            // AST REWRITE
            // elements: feature, name, baseClass
            // token labels: baseClass, name
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_baseClass=new RewriteRuleTokenStream(adaptor,"token baseClass",baseClass);
            RewriteRuleTokenStream stream_name=new RewriteRuleTokenStream(adaptor,"token name",name);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 39:3: -> ^( CLASS_T $name ( $baseClass)? ^( FEATURES_T ( feature )* ) )
            {
                dbg.location(39,6);
                // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:39:6: ^( CLASS_T $name ( $baseClass)? ^( FEATURES_T ( feature )* ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(39,8);
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASS_T, "CLASS_T"), root_1);

                dbg.location(39,16);
                adaptor.addChild(root_1, stream_name.nextNode());
                dbg.location(39,22);
                // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:39:22: ( $baseClass)?
                if ( stream_baseClass.hasNext() ) {
                    dbg.location(39,22);
                    adaptor.addChild(root_1, stream_baseClass.nextNode());

                }
                stream_baseClass.reset();
                dbg.location(39,34);
                // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:39:34: ^( FEATURES_T ( feature )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                dbg.location(39,36);
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FEATURES_T, "FEATURES_T"), root_2);

                dbg.location(39,47);
                // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:39:47: ( feature )*
                while ( stream_feature.hasNext() ) {
                    dbg.location(39,47);
                    adaptor.addChild(root_2, stream_feature.nextTree());

                }
                stream_feature.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(40, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "class_stat");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "class_stat"

    public static class feature_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "feature"
    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:42:1: feature : ( ID '(' ( formal ( ',' formal )* )? ')' ':' type= TYPE '{' expr '}' -> ^( METHOD_T ID TYPE ^( FORMALS_T ( formal )* ) ^( EXPR_T expr ) ) | ID ':' TYPE ( '<-' expr )? -> ^( ATTR_T ID TYPE ( ^( EXPR_T expr ) )? ) );
    public final COOLTreeBuilderParser.feature_return feature() throws RecognitionException {
        COOLTreeBuilderParser.feature_return retval = new COOLTreeBuilderParser.feature_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token type=null;
        Token ID9=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token ID19=null;
        Token char_literal20=null;
        Token TYPE21=null;
        Token string_literal22=null;
        COOLTreeBuilderParser.formal_return formal11 = null;

        COOLTreeBuilderParser.formal_return formal13 = null;

        COOLTreeBuilderParser.expr_return expr17 = null;

        COOLTreeBuilderParser.expr_return expr23 = null;


        CommonTree type_tree=null;
        CommonTree ID9_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree ID19_tree=null;
        CommonTree char_literal20_tree=null;
        CommonTree TYPE21_tree=null;
        CommonTree string_literal22_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
        RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
        RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_formal=new RewriteRuleSubtreeStream(adaptor,"rule formal");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try { dbg.enterRule(getGrammarFileName(), "feature");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(42, 1);

        try {
            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:43:2: ( ID '(' ( formal ( ',' formal )* )? ')' ':' type= TYPE '{' expr '}' -> ^( METHOD_T ID TYPE ^( FORMALS_T ( formal )* ) ^( EXPR_T expr ) ) | ID ':' TYPE ( '<-' expr )? -> ^( ATTR_T ID TYPE ( ^( EXPR_T expr ) )? ) )
            int alt7=2;
            try { dbg.enterDecision(7);

            int LA7_0 = input.LA(1);

            if ( (LA7_0==ID) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==49) ) {
                    alt7=1;
                }
                else if ( (LA7_1==52) ) {
                    alt7=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(7);}

            switch (alt7) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:44:2: ID '(' ( formal ( ',' formal )* )? ')' ':' type= TYPE '{' expr '}'
                    {
                    dbg.location(44,2);
                    ID9=(Token)match(input,ID,FOLLOW_ID_in_feature350); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID9);

                    dbg.location(44,5);
                    char_literal10=(Token)match(input,49,FOLLOW_49_in_feature352); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_49.add(char_literal10);

                    dbg.location(44,9);
                    // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:44:9: ( formal ( ',' formal )* )?
                    int alt5=2;
                    try { dbg.enterSubRule(5);
                    try { dbg.enterDecision(5);

                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==ID) ) {
                        alt5=1;
                    }
                    } finally {dbg.exitDecision(5);}

                    switch (alt5) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:44:10: formal ( ',' formal )*
                            {
                            dbg.location(44,10);
                            pushFollow(FOLLOW_formal_in_feature355);
                            formal11=formal();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_formal.add(formal11.getTree());
                            dbg.location(44,17);
                            // /home/sana/Desktop/Semestrul1/CPL/Teme/Tema2/src/COOLTreeBuilder.g:44:17: ( ',' formal )*
                            try { dbg.enterSubRule(4);

                            loop4:
                            do {
                                int alt4=2;
                                try { dbg.enterDecision(4);

                                int LA4_0 = input.LA(1);

                                if ( (LA4_0==50) ) {
                                    alt4=1;
                                }


                                } finally {dbg.exitDecision(4);}

                                switch (alt4) {
                            	case 1 :
                            	    dbg.enterAlt(1);
